# clashctl2

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  setup.sh
clashctl/: set_proxy  unset_proxy
include/: commands.hpp  controller.hpp  log.hpp  menu.hpp  utils.hpp
